<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_white"
    android:orientation="vertical">

    <!-- 标题 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/application_green">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:baselineAligned="true"
            android:gravity="center_vertical|start"
            android:orientation="vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/back" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/modify_password"
            android:textColor="@color/application_white"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/application_line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/old_password"
            android:textColor="@color/modify_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edOldPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="12"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/modify_text"
            android:textColorHint="@color/modify_hint"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/application_line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/new_password"
            android:textColor="@color/modify_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/modify_text"
            android:textColorHint="@color/modify_hint"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/application_line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/confirm_password"
            android:textColor="@color/modify_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/modify_text"
            android:textColorHint="@color/modify_hint"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/application_line_gray" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_corner_orange"
        android:text="@string/commit"
        android:textColor="@color/application_white"
        android:textSize="18sp" />

</LinearLayout>
