<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/application_white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/mobile_number"
            android:textColor="@color/modify_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_mobilenumber"
            android:inputType="number"
            android:maxLength="11"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/modify_text"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_corner_orange"
        android:text="@string/commit"
        android:textColor="@color/application_white"
        android:textSize="18sp" />

</LinearLayout>
