<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_gray"
    android:orientation="vertical">

    <!-- 标题 -->
    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/application_green">

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@null"
            android:baselineAligned="true"
            android:gravity="center_vertical|start"
            android:orientation="vertical"
            android:paddingEnd="15dp"
            android:paddingStart="15dp">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/back" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@color/application_white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:gravity="center_vertical|end"
            android:paddingEnd="15dp"
            android:paddingStart="5dp"
            android:text="@string/delete"
            android:textColor="@color/application_white"
            android:textSize="14sp" />

    </RelativeLayout>

    <!-- 消息标题 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/application_black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/application_black"
                android:textSize="17sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/application_text_gray"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/application_line_gray" />

    <!-- 消息内容 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="15dp"
        android:paddingStart="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/message_content1"
                android:textColor="@color/application_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/application_green"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/message_content2"
                android:textColor="@color/application_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvParameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/application_green"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/message_content3"
                android:textColor="@color/application_black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/message_content4"
                android:textColor="@color/application_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/application_green"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/message_content5"
                android:textColor="@color/application_black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvOverProof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/application_green"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
